--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,8 @@
   <script src="assets/js/jquery.responsiveTabs.js" type="text/javascript"></script>
   <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
   </script>
-  <!----webfonts--->
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-    <!---//webfonts--->
-    <!----start-top-nav-script---->
+  <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
   <script>
   $(function() {
     var pull 		= $('#pull');
